--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --parallel"
+    "test": "mocha --parallel",
+    "start": "node index.mjs"
   },
   "author": "",
   "license": "ISC",
